--- a/css/index.scss
+++ b/css/index.scss
@@ -159,6 +159,10 @@ section{
         }
     }
 }
+footer{
+    margin: 0;
+    height: 40px;
+}
 
 @media screen and (max-width: 1200px) {
     .content{
